Issue #65: fixing header form position on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -1383,8 +1383,7 @@ body footer .copyright a {
     font-size: 16px;
   }
   body header .header-container .head-message {
-    width: 80%;
-    margin: 15px auto 30px auto;
+    margin: 15px auto 25px auto;
   }
   body header .header-container .head-message h2 {
     font-size: 32px;
