--- a/scss/mediaqueries.scss
+++ b/scss/mediaqueries.scss
@@ -229,9 +229,8 @@
           }
         }
         .header-container {
-          .head-message {
-            width: 80%;
-            margin: 15px auto 30px auto;
+          .head-message {                        
+            margin: 15px auto 25px auto;
             h2 {
               font-size: 32px;
               .line {
